<resources>
    <string name="app_name">Hoo</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Login">Login</string>
    <string name="SignUpPromt">Don\'t have an account?</string>
    <string name="SignUp">Sign Up</string>
    <string name="CreateAccount">Create Account</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Account">Account</string>
    <string name="Document">Document</string>
    <string name="BirdName">Bird Name</string>
    <string name="Num_of_birds">Number of Birds</string>
    <string name="Capture">Capture</string>
    <string name="Navigate">Navigate</string>
    <string name="SettingsAndStats">Settings &amp; Statistics</string>
    <string name="Achievements">Achievements</string>
    <string name="History">History</string>
    <string name="Address">Address</string>
    <string name="Settings">Settings</string>
    <string name="Statistics">Statistics</string>
    <string name="Metric">Metric</string>
    <string name="Imperial">Imperial</string>
    <string name="TotalBirdsSpotted">Total Birds Spotted:</string>
    <string name="MaxTravelDistance">Max Travel Distance:</string>
    <string name="MostSpottedBird">Most Spotted Bird:</string>
    <string name="LeastSpottedBird">Least Spotted Bird:</string>
    <string name="ActivityMenu">Activity Menu</string>
    <string name="SignOut">Sign Out</string>
    <string name="SaveSettings">Save Settings</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicG1vbmV5IiwiYSI6ImNsbWtodXJtZjAyYnIyaWw4MTJkMGljcjAifQ.Mh08MpxLsPdflc-ddnT53g</string>
    <string name="Hotspot">Bird Hotspots</string>
    <string name="BirdsObservations">Birds Observed</string>
    <string name="BirdDetailed">Picture Markers</string>
    <string name="BirdSimple">Simple Markers</string>
    <string name="Amount">Amount:</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>