<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="right"
    android:background="@color/md_theme_light_inverseOnSurface"
    tools:context=".MenuFragment">

    <LinearLayout
        android:id="@+id/linVertMenu"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:divider="@drawable/divider"
        android:orientation="vertical"
        android:showDividers="end">

        <TextView
            android:id="@+id/tvAccount"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/Account" />

        <Button
            android:id="@+id/btnAcntAchievements"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/Achievements"
            android:textAlignment="textStart"
            android:textColor="@color/md_theme_light_onSurface"
            app:icon="@drawable/achievements_icon"
            app:iconGravity="end"
            app:iconTint="@color/md_theme_light_onSurface" />

        <Button
            android:id="@+id/btnAcntSettStats"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/SettingsAndStats"
            android:textAlignment="textStart"
            android:textColor="@color/md_theme_light_onSurface"
            app:icon="@drawable/settstats_icon"
            app:iconGravity="end"
            app:iconTint="@color/md_theme_light_onSurface" />

        <Button
            android:id="@+id/btnAcntSignOut"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/SignOut"
            android:textAlignment="textStart"
            android:textColor="@color/md_theme_light_onSurface"
            app:icon="@drawable/signout_icon"
            app:iconGravity="end"
            app:iconTint="@color/md_theme_light_onSurface" />

    </LinearLayout>

</FrameLayout>