<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/ivLoginImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/hoologobg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"></LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="@dimen/TextInpuLayoutWidth"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilUsername"
        android:layout_centerHorizontal="true"
        android:hint="@string/Password"
        app:boxStrokeColor="@color/md_theme_light_primary"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintTextColor="@color/md_theme_light_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/md_theme_light_onSurface" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="@dimen/ButtonWidth"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/md_theme_light_primary"
        android:elevation="4dp"
        android:text="@string/Login"
        android:textColorLink="@color/md_theme_light_primary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        android:layout_width="@dimen/TextInpuLayoutWidth"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivLoginImage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/Username"
        app:boxStrokeColor="@color/md_theme_light_primary"
        app:errorEnabled="true"
        app:hintTextColor="@color/md_theme_light_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/md_theme_light_onSurface" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvSignUpPromt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/SignUpPromt" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvSignUpPromt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-10dp"
        android:text="@string/SignUp"
        android:textColorLink="@color/md_theme_light_primary" />

</RelativeLayout>