<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mtSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/md_theme_light_surfaceVariant"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/arrow_back_24px"
            app:title="@string/SignUp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUsername"
            android:layout_width="@dimen/TextInpuLayoutWidth"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/Username"
            app:boxStrokeColor="@color/md_theme_light_primary"
            app:errorEnabled="true"
            app:hintTextColor="@color/md_theme_light_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="@color/md_theme_light_onSurface" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="@dimen/TextInpuLayoutWidth"
            android:layout_height="wrap_content"
            android:hint="@string/Password"
            app:boxStrokeColor="@color/md_theme_light_primary"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:hintTextColor="@color/md_theme_light_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/md_theme_light_onSurface" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            android:layout_width="@dimen/TextInpuLayoutWidth"
            android:layout_height="wrap_content"
            android:hint="@string/Confirm_Password"
            app:boxStrokeColor="@color/md_theme_light_primary"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:hintTextColor="@color/md_theme_light_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/md_theme_light_onSurface" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCreateAccount"
            style="@style/Widget.Material3.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:elevation="4dp"
            android:text="@string/CreateAccount" />

    </LinearLayout>
</RelativeLayout>